Had trouble with making the next section appear at the top, there was too much space between the item and the box. Fixed this by lowering padding, and increasing padding only at the bottom.

--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@ ul {
     display: flex;
     background-color: white;
     color:black;
-    padding: 250px;
+    padding: 40px;
+    align-items: flex-start;
     justify-content: center;
-    align-items:center;
-    text-align: center;
+    padding-bottom: 350px;
 }
